# mlops-home-credit

.github/workflows/: ci.yml
home-credit-default-risk/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
home-credit-default-risk/dashboard/: app.py  requirements.txt
home-credit-default-risk/docs/: mkdocs.yml
home-credit-default-risk/docs/docs/: Readme_eda.md  index.md
home-credit-default-risk/home_credit/: __init__.py  config.py  dataset.py  features.py  plots.py  requirements.txt
home-credit-default-risk/home_credit/api/: main.py
home-credit-default-risk/home_credit/dashboard/: app.py
home-credit-default-risk/home_credit/modeling/: evaluate.py  interpretability.py  models.py  predict.py  tracking.py  train.py  train_model.py
home-credit-default-risk/models/: best_model.joblib
home-credit-default-risk/notebooks/: scoring_01_exploration.ipynb  scoring_02_modelling.ipynb
home-credit-default-risk/notebooks/mlruns/0/: meta.yaml
home-credit-default-risk/notebooks/mlruns/186609019349368816/: meta.yaml
home-credit-default-risk/notebooks/mlruns/186609019349368816/2c6d677d31b44948a3224dbd26dc41ce/: meta.yaml
home-credit-default-risk/notebooks/mlruns/186609019349368816/6c7fa4f6f6654cc485437bef59d049b1/: meta.yaml
home-credit-default-risk/notebooks/mlruns/186609019349368816/7833b57c31d447debb9d0dd7be27a6f0/: meta.yaml
home-credit-default-risk/reports/: app.py
home-credit-default-risk/tests/: sample_data.csv  test_data.py  test_predict.py  test_train_model.py
models/: best_model.pkl
(+60 files in other folders)
